@@ -396,6 +396,7 @@ pm-strontium-black-ash=Strontium black ash
 pm-strontium-carbonate=Strontium carbonate
 pm-strontium-sulfide=Strontium sulfide
 pm-strontium-ore=Strontium ore
+pm-crude-matte-copper=Crude matte copper
 
 automation-science-pack=Transition metal pack
 logistic-science-pack=Advanced transition metal pack
