@@ -55,7 +55,7 @@ data:extend({
       PM.product("pm-zinc-ore", 6),
       PM.product_range("sulfur", 2, 4),
     }
-  } --[[@as data.RecipePrototype]],
+  },
 
   {
     type = "recipe",
@@ -96,5 +96,5 @@ data:extend({
       PM.product("pm-zinc-ore", 6),
       PM.product_range("sulfur", 0, 4),
     }
-  } --[[@as data.RecipePrototype]],
+  },
 })
