@@ -128,71 +128,6 @@ data:extend({
     }
   },
 
-
-  {
-    type = "recipe",
-    name = "pm-ezekiel-iron-purifying",
-    icon_size = 64,
-    icons =
-    {
-      {
-        icon = "__periodic-madness__/graphics/icons/ores/iron-chunks.png",
-        icon_size = 64,
-      },
-      {
-        icon = "__periodic-madness__/graphics/icons/fluids/hydrochloric-acid.png",
-        icon_size = 64,
-      },
-    },
-    subgroup = "pm-iron-tm",
-    order = "a",
-    category = "pm-acids",
-    enabled = false,
-    allow_decomposition = false,
-    energy_required = 1,
-    ingredients =
-    {
-      PM.ingredient("pm-iron-chunk", 1),
-      PM.ingredient("pm-hydrochloric-acid", 5, "fluid")
-    },
-    results =
-    {
-      PM.product("iron-ore", 1),
-      PM.product_chance("pm-ore-slag", 1, 0.5)
-    }
-  },
-  {
-    type = "recipe",
-    name = "pm-ezekiel-copper-purifying",
-    icon_size = 64,
-    icons =
-    {
-      {
-        icon = "__periodic-madness__/graphics/icons/ores/copper-chunks.png",
-        icon_size = 64,
-      },
-      {
-        icon = "__periodic-madness__/graphics/icons/fluids/hydrochloric-acid.png",
-        icon_size = 64,
-      },
-    },
-    subgroup = "pm-copper-tm",
-    order = "a",
-    category = "pm-acids",
-    enabled = false,
-    allow_decomposition = false,
-    energy_required = 1,
-    ingredients =
-    {
-      PM.ingredient("pm-copper-chunk", 1),
-      PM.ingredient("pm-hydrochloric-acid", 5, "fluid")
-    },
-    results =
-    {
-      PM.product("copper-ore", 1),
-      PM.product_chance("pm-ore-slag", 1, 0.5)
-    }
-  },
   {
     type = "recipe",
     name = "pm-ezekiel-nickel-purifying",
